--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Man-woman relationships -- Fiction'
 - !lcsh 'Russia -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Genius
 url: http://www.gutenberg.org/ebooks/22004
